// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field/username getUsernameValidation() returns database connection's username validation 1`] = `
Object {
  "max": 2,
  "min": 1,
}
`;

exports[`field/username setUsername() calls setField 1`] = `
Array [
  Immutable.Map {
    "validation": null,
  },
  "username",
  "a-username",
  [Function],
]
`;

exports[`field/username setUsername() doesn't trim the username when the value doesn't contain a @ 1`] = `
Array [
  Immutable.Map {
    "validation": null,
  },
  "username",
  " a-username ",
  [Function],
]
`;

exports[`field/username setUsername() trims username when the value contains a @ and a . 1`] = `
Array [
  Immutable.Map {
    "validation": null,
  },
  "username",
  "another@username.com",
  [Function],
]
`;
